# artico

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
compose/: docker-compose.yaml
migrations/: V1__init.sql
src/: custom_middleware.rs  db.rs  error.rs  handler.rs  main.rs  memory_store.rs  router.rs
src/auth/: github.rs  google.rs  mod.rs  session.rs
